crates/pixi-build/src/bin/pixi-build-python/snapshots/pixi_build_python__python__tests__entry_points_are_read.snap
---
source: crates/pixi-build/src/bin/pixi-build-python/python.rs
expression: entry_points
---
- "spam-cli = spam:main_cli"
