crates/pixi-build/src/bin/pixi-build-python/snapshots/pixi_build_python__python__tests__setting_host_and_build_requirements.snap
---
source: crates/pixi-build/src/bin/pixi-build-python/python.rs
expression: reqs
---
Requirements {
    build: [
        Spec(
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "boltons",
                    },
                ),
                version: Some(
                    Any,
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
            },
        ),
    ],
    host: [
        Spec(
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "hatchling",
                    },
                ),
                version: Some(
                    Any,
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
            },
        ),
        Spec(
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "pip",
                    },
                ),
                version: Some(
                    Any,
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
            },
        ),
        Spec(
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "python",
                    },
                ),
                version: Some(
                    Any,
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
            },
        ),
    ],
    run: [],
    run_constraints: [],
    run_exports: RunExports {
        noarch: [],
        strong: [],
        strong_constraints: [],
        weak: [],
        weak_constraints: [],
    },
    ignore_run_exports: IgnoreRunExports {
        by_name: {},
        from_package: {},
    },
}
